@@ -54,6 +54,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Prevent duplicate addition of StreamField blocks with the new block picker (Deepam Priyadarshi)
  * Enable partial search on images and documents index view where available (Mng)
  * Adopt a no-JavaScript and more accessible solution for option selection in reporting, using HTML only `radio` input fields (Mehul Aggarwal)
+ * Ensure that document search results count shows the correct all matches, not the paginate total (Andy Chosak)
 
 ### Documentation
 
